# docstring-verifier

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .vscode-test.mjs  .vscodeignore  MVP.md  NOTES.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-review.yml
docs/: Design.md  Future Roadmap.md  MVP.md
examples/python/: README.md  dsv101_missing_in_code.py  dsv102_missing_in_docstring.py  dsv103_type_mismatch.py  dsv104_optional_mismatch.py  dsv201_return_mismatch.py  dsv202_missing_return.py  dsv203_void_but_documented.py  dsv204_multiple_returns.py  dsv205_generator_returns.py  dsv301_missing_exception.py  dsv302_exception_not_raised.py  dsv401_side_effects.py  missing_exception.py  missing_parameter.py  return_mismatch.py  sphinx_style.py  sphinx_validation_test.py
scripts/: fix-lcov-paths.js  validate-coverage.js
src/: extension.ts  statusBar.ts
src/analyzers/: base.ts
src/codeActions/: index.ts  provider.ts  types.ts
src/diagnostics/: factory.ts  types.ts
src/docstring/: base.ts  types.ts
src/editors/: base.ts  index.ts  registry.ts  types.ts
src/extension/: configurationHandler.ts  documentEventHandler.ts  index.ts
src/languages/: index.ts  registry.ts  types.ts
src/llm/: base.ts  index.ts  types.ts
src/parsers/: base.ts  types.ts
src/test/: extension.test.ts
tools/python/: DEVELOPMENT.md  README.md  ast_extractor.py  pyproject.toml
tools/python/tests/: __init__.py  test_ast_extractor.py
tools/python/tests/fixtures/: __init__.py  test_sample.py
(+50 files in other folders)
